--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "test": "jest"
+    "install-rimraf": "npm install --save-dev rimraf",
+    "cleanup": "rimraf package-lock.json && rimraf dist && rimraf node_modules",
+    "test": "jest",
+    "build": "npm run install-rimraf && npm run cleanup && npm install && tsc && npm run test"
   },
   "author": "sawara",
   "license": "MIT",
@@ -18,10 +20,11 @@
     "@types/node": "^14.14.34",
     "@types/ws": "^8.2.2",
     "jest": "^28.1.0",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   },
-  "bundleDependencies": false,
+  "bundleDependencies": [],
   "dependencies": {
     "axios": "^0.21.1",
     "my-utils": "github:sawara7/my-utils",
