--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "kabucom-utils",
-  "version": "0.0.1",
+  "name": "utils-kabucom",
+  "version": "0.0.2",
   "description": "kabu.com / kabu STATION API utils.",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/sawara7/kabucom-utils.git"
-  },
   "main": "dist/index.js",
   "scripts": {
     "install-rimraf": "npm install --save-dev rimraf",
     "cleanup": "rimraf package-lock.json && rimraf dist && rimraf node_modules",
     "test": "jest",
-    "build": "npm run install-rimraf && npm run cleanup && npm install && tsc && npm run test"
+    "build": "npm run install-rimraf && npm run cleanup && npm install && tsc && npm run test",
+    "tsc": "tsc"
   },
-  "author": "sawara",
+  "author": "sawara7",
   "license": "MIT",
+  "bundleDependencies": [],
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^14.14.34",
@@ -22,14 +20,13 @@
     "jest": "^28.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "^5.2.0"
   },
-  "bundleDependencies": [],
   "dependencies": {
     "axios": "^0.21.1",
-    "my-utils": "github:sawara7/my-utils",
     "querystring": "^0.2.1",
-    "trade-utils": "github:sawara7/trade-utils",
-    "ws": "^8.3.0"
+    "ws": "^8.3.0",
+    "utils-general": "github:sawara7/utils-general",
+    "utils-trade": "github:sawara7/utils-trade"
   }
 }
