--- a/package.json
+++ b/package.json
@@ -4,29 +4,25 @@
   "description": "kabu.com / kabu STATION API utils.",
   "main": "dist/index.js",
   "scripts": {
-    "install-rimraf": "npm install --save-dev rimraf",
-    "cleanup": "rimraf package-lock.json && rimraf dist && rimraf node_modules",
-    "test": "jest",
-    "build": "npm run install-rimraf && npm run cleanup && npm install && tsc && npm run test",
-    "tsc": "tsc"
+    "build": "ncu -u && npm install && npm update && tsc",
+    "commit": "git commit -am 'commit' && npm version patch && git push",
+    "test": "jest"
   },
   "author": "sawara7",
   "license": "MIT",
   "bundleDependencies": [],
   "devDependencies": {
-    "@types/jest": "^27.5.1",
-    "@types/node": "^14.14.34",
-    "@types/ws": "^8.2.2",
-    "jest": "^28.1.0",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.2",
-    "typescript": "^5.2.0"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.11",
+    "@types/ws": "^8.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "querystring": "^0.2.1",
-    "ws": "^8.3.0",
+    "axios": "^1.7.2",
     "utils-general": "github:sawara7/utils-general",
-    "utils-trade": "github:sawara7/utils-trade"
+    "utils-trade": "github:sawara7/utils-trade",
+    "ws": "^8.18.0"
   }
 }
